--- a/templates/tool.pug
+++ b/templates/tool.pug
@@ -5,5 +5,5 @@
 //- logo - tool logo
 //- name - used for alt tag
 
-a(href=url || "#")
-  img(src=logo alt=name width="40" height="40" style="max-width: 100%;")
+a(href=url || "#" target="_blank" ref="noopener noreferrer")
+  img(src=logo alt=name height="40" style="max-width: 100%;")
